# books-microservices

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yaml
.sqlx/: query-0968ff858d649eb400195aa9933401242173b33109175a48f9604873616df62d.json  query-139798a6c95077edb813ecce2f47067527970a544b0ea4440cec36d8ab2baa51.json  query-378a04c7342410730bebf5766b87594ee766261bddc4f8a9330bedb9880b18ba.json  query-47fcfe3835a80e57e59e3f05989140782569a14d0bc644152796cde29cd57ae2.json  query-a4f29028ab68b397a2d3922925127120acef2b9e57224b9b1b2ccfe1abb33e2c.json  query-e2cd888614231d67123b7941da17dcf576f658863d1bdafa969370f90ff1b3ac.json
crates/cache/: Cargo.toml
crates/cache/src/: cache.rs  expiry.rs  lib.rs
crates/cache/src/actix/: mod.rs
crates/cache/src/serializer/: bincode.rs  bitcode.rs  json.rs  mod.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
infra/: init-dbs.sh  nginx.conf  prometheus.yml
infra/clickhouse/: 001_init.sql
infra/grafana/provisioning/dashboards/: cache-dashboard.json
infra/kafka-connect/: Dockerfile  start-connect.sh
infra/kafka-connect/connector-configs/: books-sink.json  clickhouse-sink.json  debezium-pg-source-authors.json  debezium-pg-source-ratings.json  debezium-pg-source.json
infra/superset/: Dockerfile  requirements-local.txt  superset_config.py
kafka-connect/: Dockerfile  start-connect.sh
kafka-connect/connector-configs/: authors-sink.json  books-sink.json  debezium-pg-source-authors.json  debezium-pg-source.json  ratings-sink.json
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/configuration/: base.yaml
services/api-gateway/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  schema.rs  startup.rs
services/api-gateway/src/auth/: extractor.rs  jwt.rs  middleware.rs  mod.rs
services/api-gateway/src/routes/: author.rs  book.rs  chapter.rs  entity.rs  mod.rs  ratings.rs
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/.sqlx/: query-0b0d275c85c6476ee83bf002603244e82db7c04801ae255214e42f0d56026185.json  query-2459ca48045b81d1e2f0b5316901f78ed44c0414d0c2637d81a4118a47461104.json  query-cace6e8b043ef1a894ec303606a7fec75ee82a807d0b0790404e64844f56e949.json
services/auth-service/configuration/: base.yaml
services/auth-service/frontend/: package-lock.json  rollup.config.js
services/auth-service/frontend/src/components/: Login.svelte  Registration.svelte  Reset.svelte
services/auth-service/frontend/src/libs/: api.ts  auth.ts
services/auth-service/frontend/src/pages/: Auth.svelte  Main.svelte
services/auth-service/migrations/: 20250425192444_init.sql
services/auth-service/public/: index.html
services/auth-service/src/: config.rs  lib.rs  main.rs  schema.rs  startup.rs  utils.rs
services/auth-service/src/auth/: client_store.rs  code_store.rs  jwt.rs  mod.rs  password.rs  pkce.rs  token_store.rs
services/auth-service/src/routes/: auth.rs  jwks.rs  jwt.rs  mod.rs  oauth.rs
services/auth-service/src/services/: user.rs
services/book-catalog/: Cargo.toml  Dockerfile  init_db.sh
services/book-catalog/configuration/: base.yaml
services/book-catalog/migration-data/: genres.csv  tags.csv
services/book-catalog/src/: config.rs  lib.rs  main.rs  schema.rs  startup.rs
services/book-catalog/src/entity/: author.rs  book.rs  book_author.rs  book_genre.rs  book_tag.rs  chapter.rs  genre.rs  mod.rs  series.rs  tag.rs
services/book-catalog/src/migration/: m20220101_000001_create_table.rs  m20250509_124042_database_seeding.rs  mod.rs
services/book-catalog/src/routes/: metrics.rs  mod.rs
services/book-catalog/src/routes/v1/: authors.rs  books.rs  chapters.rs  constants.rs  crud.rs  mod.rs  search.rs
services/book-catalog/src/search/: elasticsearch.rs  mod.rs
services/book-catalog/src/storage/: mod.rs  s3.rs
services/book-catalog/src/utils/: db.rs  image.rs  mod.rs  validators.rs
services/book-storage/: Cargo.toml
services/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
services/frontend/src/: App.svelte  api.ts  draftManager.ts  tokenManager.ts  types.ts
services/frontend/src/components/: BookCard.svelte  Footer.svelte  Header.svelte  ReaderHeader.svelte
services/frontend/src/routes/: AuthorPage.svelte  BookPage.svelte  Callback.svelte  Catalog.svelte  ChapterEditor.svelte  ChapterReader.svelte  ChaptersList.svelte  CreateAuthor.svelte  CreateBook.svelte  EditAuthor.svelte  EditBook.svelte  Home.svelte  Login.svelte
services/frontend/src/store/: authStore.ts  bookStore.ts
services/frontend/src/utils/: auth.ts
services/ratings-service/: Cargo.toml  Dockerfile
services/ratings-service/.sqlx/: query-5038f7fd0336bc6934f8f8f6b4a29bbe412c23b661f09d514f84bc949050db90.json  query-5c55c4db470e174337e56ffdb2dc8694b13d0729a95c947fc79479bb1f01ec56.json  query-6d681a9c5cf9dd13885d8043e254911b7eb53454510c9a9cf969698ff78018e2.json  query-7875585c47f031eb0c1c091e9e447f7d7420d8cc13a523c8654bf50abad95a12.json  query-8640b23b25219fb8599e51a33279a91a39dffea321b6993eefa21dd45fd16367.json  query-8fd9b46828bf3e020c8e8bbaa9024ff96cc59150b190c4cd1e2873684612224b.json  query-c55c915fe0bf8a4bd20b8a39050aba6db1049a3267ef5b4e82c7caa33a935c17.json  query-d02b9b4bae4e6c805322240a69dc4c93fee337d548e47813c31c40db9a5b6dc7.json  query-ef85a21c72d7916d17b219027217398e9733492a7cba9f9137079d315cfdb639.json
services/ratings-service/configuration/: base.yaml
services/ratings-service/migrations/: 20250530055031_init.sql
services/ratings-service/src/: config.rs  lib.rs  main.rs  schema.rs  startup.rs
services/ratings-service/src/routes/: mod.rs  ratings.rs
