[workspace.package]
version = "0.1.0"
authors = ["Minnakhmetov Almaz"]
edition = "2021"
license = "MIT"

[workspace]
members = [
    "services/api-gateway",
    "services/auth-service",
    "services/book-catalog",
    "services/book-storage",

    "crates/telemetry",
    "crates/cache"
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
telemetry = { path = "crates/telemetry" }
cache = { path = "crates/cache" }

sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = "1.1.10"
async-std = { version = "1", features = ["attributes", "tokio1"] }

actix-web = "4.10.2"
config = "0.15.11"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4"
serde_json = "1.0"
tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
elasticsearch = "8.17.0-alpha.1"
async-trait = "0.1.0"
reqwest = { version = "0.12.15", features = ["json"] }

thiserror = "2.0.12"
regex = "1.11.1"

moka = { version = "0.12.10", features = ["future"] }
bb8-redis = "0.21.0"
bincode = "2.0.1"

metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"