[workspace.package]
version = "0.1.0"
authors = ["Minnakhmetov Almaz"]
edition = "2021"
license = "MIT"

[workspace]
members = [
    "services/api-gateway",
    "services/auth-service",
    "services/book-catalog",

    "crates/telemetry",
    "crates/cache"
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
telemetry = { path = "crates/telemetry" }
cache = { path = "crates/cache" }

sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = "1.1.11"
async-std = { version = "1", features = ["attributes", "tokio1"] }

actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-files = "0.6.6"
actix-cors = "0.7.1"
config = "0.15.11"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7"
serde_json = "1.0"
serde_qs = { version = "0.15.0", features = ["actix4"] }
tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
elasticsearch = "8.17.0-alpha.1"
async-trait = "0.1.0"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
image = "0.25.6"
tokio = { version = "1.45.0", features = ["full"] }
uuid = "1.16.0"
rust-s3 = "0.35.1"
anyhow = "1.0.98"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
time = "0.3.41"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5.3"
urlencoding = "2.1.3"
tokio-stream = "0.1.17"
csv = "1.3.1"

sha2 = "0.10.9"
rand = "0.9.1"
base64 = "0.22.1"
rsa = "0.9.8"

thiserror = "2.0.12"
regex = "1.11.1"

moka = { version = "0.12.10", features = ["future"] }
bb8-redis = "0.23.0"
bincode = "2.0.1"

metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"