[workspace.package]
version = "0.1.0"
authors = ["Minnakhmetov Almaz"]
edition = "2021"
license = "MIT"

[workspace]
members = [
    "services/api-gateway",
    "services/auth-service",
    "services/book-catalog",
    "services/ratings-service",

    "crates/telemetry",
    "crates/cache"
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
telemetry = { path = "crates/telemetry" }
cache = { path = "crates/cache" }

sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = "1.1.20"
async-std = { version = "1", features = ["attributes", "tokio1"] }

actix-web = "4.13.0"
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-files = "0.6.10"
actix-cors = "0.7.1"
config = "0.15.22"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7"
serde_json = "1.0"
serde_qs = { version = "1.1.1", features = ["actix4"] }
tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
elasticsearch = "8.17.0-alpha.1"
async-trait = "0.1"
reqwest = { version = "0.12.28", features = ["json", "stream"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
image = "0.25.10"
tokio = { version = "1.52.2", features = ["full"] }
uuid = "1.23.1"
rust-s3 = "0.37.2"
anyhow = "1.0.102"
jsonwebtoken = "10.3.0"
chrono = { version = "0.4.44", features = ["serde"] }
time = "0.3.47"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5.3"
urlencoding = "2.1.3"
tokio-stream = "0.1.18"
csv = "1.4.0"

sha2 = "0.11.0"
rand = "0.10.1"
base64 = "0.22.1"
rsa = "0.9.10"

thiserror = "2.0.18"
regex = "1.12.3"

moka = { version = "0.12.15", features = ["future"] }
bb8-redis = "0.26.0"
bitcode = { version = "0.6", features = ["serde"] }

metrics = "0.24.5"
metrics-exporter-prometheus = "0.18.3"
pin-project-lite = "0.2.17"