[package]
name = "cache"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
actix-web = ["dep:actix-web", "dep:futures-util", "dep:pin-project-lite"]

[dependencies]
moka.workspace = true
bb8-redis.workspace = true
bincode.workspace = true
serde.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true

actix-web = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }