[package]
name = "api-gateway"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde-aux.workspace = true
config.workspace = true
actix-web.workspace = true
tracing-actix-web.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true

telemetry.workspace = true