[package]
name = "api-gateway"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde-aux.workspace = true
serde_qs.workspace = true
serde_json.workspace = true
config.workspace = true
actix-web.workspace = true
tracing-actix-web.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
moka.workspace = true
bb8-redis.workspace = true
metrics-exporter-prometheus.workspace = true

telemetry.workspace = true
cache = { workspace = true, features = ["actix-web"] }