[package]
name = "auth-service"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
config.workspace = true
actix-web.workspace = true
actix-web-httpauth.workspace = true
actix-session.workspace = true
actix-files.workspace = true
actix-cors.workspace = true
tracing-actix-web.workspace = true
reqwest.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
anyhow.workspace = true
uuid.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
rsa.workspace = true
tracing.workspace = true
sqlx.workspace = true
secrecy.workspace = true
argon2.workspace = true
bb8-redis.workspace = true
bincode.workspace = true
time.workspace = true
urlencoding.workspace = true

telemetry.workspace = true
cache.workspace = true